       work as specified.
    ** OPEN and WITH-OPEN-STREAM allow opening streams with
       element-type larger than ([UN]SIGNED-BYTE 32).

changes in sbcl-0.8.9 relative to sbcl-0.8.8:
  * The runtime build system has been tweaked to support building
    (on SPARC/SunOS) using a C compiler which invokes Sun's own
    assembler and linker.  (thanks to Nikodemus Siivola)
  * optimization: implemented multiplication as a modular
    (UNSIGNED-BYTE 32) operation on the PPC backend.
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** ADJUST-ARRAY now copies the datum in a zero rank array if
       required.
    ** ADJUST-ARRAY no longer adjusts non-adjustable arrays.
    ** MAKE-STRING-INPUT-STREAM accepts NIL as a value for :END.
    ** MAKE-STRING-INPUT-STREAM functions correctly for strings with
       element-type NIL.
    ** CLEAR-INPUT accepts NIL and T for its (optional) stream
       argument.
    ** Ratios can now be printed correctly with *PRINT-BASE* bound to
       2, 8 or 16.
    ** ECHO-STREAMs no longer attempt to echo the end of file value to
       their output stream on EOF from read.

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.