@@ -2332,6 +2332,8 @@ changes in sbcl-0.8.9 relative to sbcl-0.8.8:
        2, 8 or 16.
     ** ECHO-STREAMs no longer attempt to echo the end of file value to
        their output stream on EOF from read.
+    ** CONCATENATED-STREAM-STREAMS discards constituent streams which
+       have been read to end-of-file.
 
 planned incompatible changes in 0.8.x:
   * (not done yet, but planned:) When the profiling interface settles
